# lingrex

./: .gitignore  .zenodo.json  LICENSE  MANIFEST.in  README.md  RELEASING.md  pip-requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
lingrex/: __init__.py  colex.py  copar.py  cpa.py  cpr.py  evaluate.py  util.py
src/lingrex/: __init__.py  align.py  borrowing.py  cognates.py  colex.py  copar.py  evaluate.py  fuzzy.py  reconstruct.py  regularity.py  semirex.py  trimming.py  util.py
tests/: alignments-merged.tsv.tsv  bai-consensus.tsv  change-directions.tsv  conftest.py  proto-bai.tsv  proto-burmish.tsv  sounds-burmish.tsv  sounds.gml  test_align.py  test_bai.py  test_borrowing.py  test_cognates.py  test_colex.py  test_copar.py  test_cpa.py  test_cpr.py  test_evaluate.py  test_fuzzy.py  test_reconstruct.py  test_regularity.py  test_trimming.py  test_util.py  test_workflows.py
tests/data/: east-polynesian.tsv  hillburmish.tsv  wordlist.tsv
tests/workflows/bodt-2019/: Makefile  bodt-khobwa-cleaned.tsv  predict.py  test-prediction.py
tests/workflows/list-2019/: Makefile  general.py  predict.py
tests/workflows/list-2019/data/: burmish-240-8.tsv  chinese-203-19.tsv  chinese-623-14.tsv  east-polynesian.tsv  japanese-200-10.tsv  polynesian-210-10.tsv
tests/workflows/list-2019/results/: burmish-240-8-75.txt  burmish-240-8-individual-75.tsv  chinese-623-14-75.txt  (+9 more)
tests/workflows/wu-2020/: 4_crosssemantic.py  5_correspondence.py  D_Chen_aligned.tsv  D_Chen_all_patterns.tsv  D_Chen_crossids.tsv  D_Chen_patterns.tsv  Makefile
