[easy_install]
zip_ok = false

[metadata]
description-file = README.md
license_file = LICENSE

[bdist_wheel]
universal = 1

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301,F405
max-line-length = 100
exclude = .tox

[tool:pytest]
minversion = 3.1
testpaths = tests
addopts = --cov

[coverage:run]
source =
    linse
    tests

[coverage:report]
show_missing = true

